Prevent avatar and scores from being squashed

--- a/resources/assets/less/bem/beatmapset-score-big.less
+++ b/resources/assets/less/bem/beatmapset-score-big.less
@@ -81,6 +81,7 @@
     z-index: 1;
     margin-right: @spacing;
     margin-top: @spacing;
+    flex: none;
   }
 
   &__user-box {
@@ -105,6 +106,7 @@
 
   &__stats-box {
     display: flex;
+    flex: none;
     align-items: flex-end;
     justify-content: flex-end;
 
